Organização do css, cadastro e listagem de cliente

--- a/src/layout.css
+++ b/src/layout.css
@@ -64,36 +64,12 @@ a {
 	border-radius: 10px;
 	padding: 12px 20px;
 	color: inherit;
+	font-family: inherit;
 	font-size: inherit;
 }
 
 .form-group input:focus, .form-group textarea:focus {
 	border-color: #a6a6a6;
-}
-
-.table {
-	overflow-x: auto;
-}
-
-.table table {
-	width: 100%;
-	border-collapse: collapse;
-}
-
-.table table td, .table table th {
-	padding: 15px 20px;
-}
-
-.table table td {
-	border-top: solid 1px #dedede;
-}
-
-.table table thead {
-	text-align: left;
-}
-
-.table table thead tr {
-	background-color: #dedede;
 }
 
 .app {
@@ -102,42 +78,10 @@ a {
 	display: flex;
 }
 
-.menu {
-	width: 15rem;
-	min-height: 100%;
-	max-height: 100%;
-	background-color: #dedede;
-	padding: 60px 30px;
-}
-
-.menu nav {
-	margin-top: 50px;
-	display: flex;
-	flex-direction: column;
-	font-weight: 700;
-}
-
-.menu nav a, .menu nav a:visited {
-	margin: 8px 0;
-	font-size: 14px;
-	padding: 13px 20px;
-	border-radius: 10px;
-	transition: all 0.2s;
-}
-
-.menu nav a svg {
-	margin-right: 10px;
-}
-
-.menu nav a.active, .menu nav a:focus, .menu nav a:hover, .menu nav a:active {
-	background-color: #a6a6a6;
-	color: #fff;
-}
-
 .container {
 	flex: 1 1 0;
 	max-width: 100%;
-	padding: 60px 80px;
+	padding: 60px;
 }
 
 .container header {
