--- a/src/layout.css
+++ b/src/layout.css
@@ -90,7 +90,7 @@ a {
 	margin-bottom: 5px;
 }
 
-.form-group input, .form-group textarea {
+.form-group input, .form-group textarea, .form-group select {
 	border: solid 1px #dedede;
 	border-radius: 10px;
 	padding: 12px 20px;
