--- a/src/layout.css
+++ b/src/layout.css
@@ -90,7 +90,7 @@ a {
 	margin-bottom: 5px;
 }
 
-.form-group input, .form-group textarea, .form-group select {
+.form-group input, .form-group textarea {
 	border: solid 1px #dedede;
 	border-radius: 10px;
 	padding: 12px 20px;
@@ -99,7 +99,17 @@ a {
 	font-size: inherit;
 }
 
-.form-group input:focus, .form-group textarea:focus {
+.form-group .react-select__control {
+	border: solid 1px #dedede;
+	border-radius: 10px;
+	color: inherit;
+	font-family: inherit;
+	padding: 3px 15px;
+	font-size: inherit;
+	box-shadow: none;
+}
+
+.form-group input:focus, .form-group textarea:focus, .form-group .react-select__control--is-focused, .form-group .react-select__control:hover {
 	border-color: #a6a6a6;
 }
 
